# scraper

./: README.md
realestate-scraper/: .env.example  README.md  setup.cfg
realestate-scraper/data/: amenity_vocab.json
realestate-scraper/src/dotenv/: __init__.py
realestate-scraper/src/pydantic/: __init__.py
realestate-scraper/src/rscraper/: __init__.py  amenities.py  cli.py  config.py  csv_writer.py  har_parser.py  http.py  normalize.py  parser.py  pipeline.py  writers.py
realestate-scraper/src/typer/: __init__.py
realestate-scraper/tests/: conftest.py  test_amenities.py  test_export_sft_dpo.py  test_har_parser.py  test_normalize_row.py  test_validate_csv.py  test_version.py
realestate-scraper/tests/fixtures/: listing_raw.json  listing_raw2.json  sample.har
