
[metadata]
name = rscraper
version = 0.1.0
description = Real estate scraping utilities
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.11
install_requires =
    httpx
    tenacity
    selectolax
    pydantic
    typer[all]
    python-dotenv
    pandas
    orjson

[options.extras_require]
sqlite =
    sqlite-utils
test =
    pytest

[options.entry_points]
console_scripts =
    har2listings = rscraper.cli:app

[options.packages.find]
where = src
